# rephrase

./: Cargo.toml  README.md
gamepad/: Cargo.toml
gamepad/src/: dualshock.rs  joycon.rs  lib.rs
reader/: Cargo.toml  README.md
reader/src/: main.rs
spoofer/: Cargo.toml  README.md
spoofer/.cargo/: config
spoofer/src/: main.rs  response.rs  spi.rs  usb_hid.rs  vec.rs
src/: lib.rs  model.rs
src/gamepad/: Cargo.toml
src/gamepad/src/: lib.rs
src/reader/src/: ds4.rs
src/spoofer/: Cargo.toml  README.md  memory.x  openocd.gdb
src/spoofer/.cargo/: config
src/spoofer/src/: main.rs  usb_hid.rs  vec.rs
