[package]
name = "rephrase-reader"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
bitflags = "1.2.1"
serial = "0.4.0"
usb = { package = "rusb", version = "0.6.0" }

[dependencies.gamepad]
package = "rephrase-gamepad"
path = "../gamepad"
features = ["std", "dualshock", "joycon"]
