[package]
name = "rephrase-gamepad"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gamepad"

[dependencies]
bitflags = "1.2.1"

[features]
default = ["std"]
std = []
dualshock = []
joycon = []
